    to help in user understandability of a net. This includes a plugin mechansm allowing
    workflow designers to add their own icons.
  * LWB: Now, when selecting a single net element, a notes tab will appear in the bottom
    pane of the editor, allowing workflow designers to add design notes (which will not be
    exported to the engine specification) to the selected element.
  * LWB: Enhanced the editor so it is now possible to change the ordering of task variables,
    net variales, and task parameter queries.
  * LWB: Enhaned the editor to include a convenience dialog that allows the rapid construction
    of decompositions for atomic tasks along with matching variables and parameters by
    simply choosing a number of net variables to supply and receive data. This can only
    be done on atomic tasks with no decompositions.
  * LWB: Fixed a bug where the initial values of net local variables were being double-quoted 
    at engine export time. This is especially problematic for initial values of complex-type 
    variables. 
  * LWB: Fixed a bug where the deletion of a variable in one task would cause the deletion of 
    XQueries in unrelated tasks whose decompositions contained equivalent variables to the 
    one deleted.
  * LWB: Fixed a bug where the Net Variable dialog was incorectly attempting to validate the 
    initial values of local net variables when the dialog itself was only partially 
    initialised in preparation for display.
  * LWB: Fixed a bug where the variable expression was missing a leading "/" character when
    pressing the "XPath expression" button on the Flow Details dialog for
    tasks with OR and XOR splits.
  * LWB: Upgraded editor to use JGraph 5.9.2.2 and Proguard 3.8.
  * LWB: Fixed a bug where cancelling a save-as action on a specification was being ignored,
    and the file being saved regardless.
  * LWB: Fixed a bug where you could not drag an outgoing flow from a split decorator port.